--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "download-data": "tsx scripts/download-data.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,13 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^1.0.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
