--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "csv-parse": "^6.1.0",
     "parquetjs": "^0.11.2",
+    "tailwindcss": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.17",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
