--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "next": "^16.0.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "webr": "^0.5.7"
   },
   "devDependencies": {
     "@types/cheerio": "^1.0.0",
