--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.8",
+    "@uiw/react-codemirror": "^4.25.3",
+    "codemirror": "^6.0.2",
     "next": "^16.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
