--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -38,7 +38,7 @@ jobs:
           cache: 'pnpm'
       
       - name: Install dependencies
-        run: pnpm install -D
+        run: pnpm install --no-frozen-lockfile
       
       - name: Download data
         run: pnpm run download-data
